fixed spacing for smaller screens

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -265,6 +265,12 @@ body {
 
 /***********************************************************/
 /* Media query for smaller screens */
+@media (max-width: 1120px) {
+  .pictureFrame {
+    height: 45%;
+    right: 2%;
+  }
+}
 @media (max-width: 960px) {
   .name{
     left: 40%;
@@ -275,7 +281,7 @@ body {
   .hangingLight {
     height: 40%;
     position: absolute;
-    left: calc(36% - 2px);
+    left: 39%;
     transform: translateX(-50%);
   }
 
@@ -284,7 +290,8 @@ body {
     position: absolute;
     height: auto;
     width: 100%;
-    top: 19.5vh;
+    top: 17vh;
+    left: 0%;
   }
 
   #quickQuote {
@@ -320,7 +327,7 @@ body {
   .hangingLight {
     height: 40%;
     position: absolute;
-    left: calc(36% - 2px);
+    left: 39%;
     transform: translateX(-50%);
   }
 
@@ -329,7 +336,8 @@ body {
     position: absolute;
     height: auto;
     width: 100%;
-    top: 28vh;
+    top: 18vh;
+    left: 0%;
   }
 
   #quickQuote {
@@ -365,7 +373,7 @@ body {
 
   .hangingLight {
     height: 40%;
-    left: calc(36% - 19px);
+    left: 37%;
     transform: translateX(-50%);
   }
 
@@ -374,12 +382,13 @@ body {
     position: absolute;
     height: auto;
     width: 100%;
-    top: 30vh;
+    top: 19vh;
+    left: 0%;
   }
 
   #quickQuote {
     font-size: 1.5em;
-    top: 70vh;
+    top: 50vh;
     width: calc(100% - 90px);
     padding: 15px 20px;
     left: 50%;
@@ -405,8 +414,8 @@ body {
   }
 
   .hangingLight {
-    height: 34%;
-    left: calc(36% - 19px);
+    height: 39%;
+    left: 36%;
     transform: translateX(-50%);
   }
 
@@ -415,12 +424,12 @@ body {
     position: absolute;
     height: auto;
     width: 100%;
-    top: 26vh;
+    top: 18vh;
   }
 
   #quickQuote {
     font-size: 1.4em;
-    top: 72vh;
+    top: 50vh;
     width: calc(100% - 90px);
     padding: 15px 20px;
     left: 50%;
@@ -447,7 +456,7 @@ body {
 
   .hangingLight {
     height: 40%;
-    left: calc(34% - 18px);
+    left: 35%;
     transform: translateX(-50%);
   }
 
@@ -456,12 +465,12 @@ body {
     position: absolute;
     height: auto;
     width: 100%;
-    top: 28vh;
+    top: 18vh;
   }
 
   #quickQuote {
     font-size: 1.5em;
-    top: 68vh;
+    top: 50vh;
     width: calc(100% - 90px);
     padding: 15px 20px;
     left: 50%;
@@ -487,8 +496,8 @@ body {
   }
 
   .hangingLight {
-    height: 35%;
-    left: calc(33% - 14px);
+    height: 39%;
+    left: 35%;
     transform: translateX(-50%);
   }
 
@@ -497,12 +506,13 @@ body {
     position: absolute;
     height: auto;
     width: 100%;
-    top: 27vh;
+    top: 17vh;
+    left: 0%;
   }
 
   #quickQuote {
     font-size: 1.5em;
-    top: 69vh;
+    top: 50vh;
     width: calc(100% - 90px);
     padding: 15px 20px;
     left: 50%;
@@ -528,9 +538,9 @@ body {
   }
 
   .hangingLight {
-    height: 40%;
+    height: 31%;
     position: absolute;
-    left: calc(30% - 18px);
+    left: 31%;
     transform: translateX(-50%);
   }
 
@@ -544,7 +554,7 @@ body {
 
   #quickQuote {
     font-size: 1.5em;
-    top: 33vh;
+    top: 34vh;
     width: 100%;
     padding: 15px 20px 15px 15px;
     left: 50%;
@@ -565,9 +575,9 @@ body {
 
 @media (max-width: 430px) {
 .hangingLight {
-    height: 40%;
+    height: 31%;
     position: absolute;
-    left: calc(20% - 7px);
+    left: 25%;
     transform: translateX(-50%);
   }
 
@@ -603,9 +613,9 @@ body {
 
 @media (max-width: 425px) {
   .hangingLight {
-    height: 40%;
+    height: 34%;
     position: absolute;
-    left: calc(21% - 4px);
+    left: 24%;
     transform: translateX(-50%);
   }
 
@@ -643,7 +653,7 @@ body {
   .hangingLight {
     height: 40%;
     position: absolute;
-    left: calc(18% - 4px);
+    left: 23%;
     transform: translateX(-50%);
   }
 
@@ -652,12 +662,11 @@ body {
     position: absolute;
     height: auto;
     width: 100%;
-    top: 13.5vh;
+    top: 17.5vh;
   }
 
   #quickQuote {
     font-size: 1.5em;
-    top: 37vh;
     width: 100%;
     padding: 15px 20px 15px 15px;
     left: 50%;
@@ -679,9 +688,9 @@ body {
 
 @media (max-width: 390px) {
   .hangingLight {
-    height: 40%;
+    height: 31%;
     position: absolute;
-    left: calc(18% - 10px);
+    left: 21%;
     transform: translateX(-50%);
   }
 
@@ -714,9 +723,9 @@ body {
 
 @media (max-width: 375px) {
 .hangingLight {
-    height: 40%;
+    height: 34%;
     position: absolute;
-    left: calc(14% - 2px);
+    left: 21%;
     transform: translateX(-50%);
   }
 
@@ -754,7 +763,7 @@ body {
   .hangingLight {
     height: 30%;
     position: absolute;
-    left: calc(18% - 5px);
+    left: 23%;
     transform: translateX(-50%);
   }
 
@@ -763,7 +772,7 @@ body {
     position: absolute;
     height: auto;
     width: 100%;
-    top: 9vh;
+    top: 13vh;
   }
 
   #quickQuote {
